Fix breakout gridlines when scrollbars are visible

--- a/packages/react/src/recipes/Flexsuite/Overview/FlexSuiteAIOverview.module.css
+++ b/packages/react/src/recipes/Flexsuite/Overview/FlexSuiteAIOverview.module.css
@@ -1,9 +1,5 @@
 .page {
   min-height: 100dvh;
-  /*
-   * TODO: fix the block psuedo borders in River and Tiles to remove this.
-   */
-  overflow-x: clip;
 }
 
 /* Copilot / mascot head */
